# onepm

./: .gitignore  .pre-commit-config.yaml  README.md  pdm_build.py  pyproject.toml
.github/: FUNDING.yml
.github/scripts/: get_version.py
.github/workflows/: ci.yml  release.yml
src/onepm/: __init__.py  base.py  cli.py  core.py  pdm.py  pip.py  pipenv.py  poetry.py
src/onepm/pm/: base.py  pdm.py  pip.py  pipenv.py  poetry.py  uv.py
src/onepm_shims/: shims.py
tests/: conftest.py  test_pdm.py  test_pip.py  test_pipenv.py  test_poetry.py  test_utils.py  test_uv.py
