[project]
name = "onepm"
description = "Picks the right package manager for you"
authors = [
    {name = "Frost Ming", email = "mianghong@gmail.com"},
]
dependencies = [
    "packaging>=22.1",
    "tomlkit>=0.12.3",
    "unearth>=0.14.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/frostming/onepm"
Changelog = "https://github.com/frostming/onepm/releases"

[project.scripts]
pi = "onepm:pi"
pu = "onepm:pu"
pr = "onepm:pr"
pun = "onepm:pun"
pa = "onepm:pa"
pdm = "onepm:pdm"
poetry = "onepm:poetry"
pipenv = "onepm:pipenv"
onepm = "onepm.cli:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.1.2",
    "pytest-mock>=3.12.0",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
extend-select = [
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "RUF",  # ruff
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]

[tool.ruff.isort]
known-first-party = ["onepm"]

[tool.onepm]
package-manager = "pdm>=2.12.0"
