[project]
name = "onepm-workspace"
description = "Picks the right package manager for you."
authors = [
    {name = "Frost Ming", email = "mianghong@gmail.com"},
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.1.2",
    "pytest-mock>=3.12.0",
]
workspace = [
    "-e file:///${PROJECT_ROOT}/packages/onepm#egg=onepm",
    "-e file:///${PROJECT_ROOT}/packages/onepm-shims#egg=onepm-shims",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
extend-select = [
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "RUF",  # ruff
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]

[tool.ruff.isort]
known-first-party = ["onepm"]

[tool.onepm]
package-manager = "pdm>=2.12.0"

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.10"

[tool.pdm.scripts]
test = "pytest -ra packages/onepm/tests"
