[build-system]
requires = ["pdm-backend", "mina-build>=0.6"]
build-backend = "pdm.backend"

[project]
name = "onepm-workspace"
description = "The workspace for onepm"
authors = [
    {name = "Frost Ming", email = "mianghong@gmail.com"},
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/frostming/onepm"
Repository = "https://github.com/frostming/onepm"
Changelog = "https://github.com/frostming/onepm/releases"

[tool.pdm.version]
source = "scm"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.1.2",
    "pytest-mock>=3.12.0",
]
dev = [
    "unearth>=0.14.0",
    "tomlkit>=0.12.3",
    "packaging>=23.2",
]

[tool.pdm.scripts]
test = "pytest -ra tests"

[tool.ruff]
target-version = "py310"

[tool.mina]
enabled = true
default-build-target = "onepm"

[tool.mina.packages.onepm]
includes = ["src/onepm"]
source-includes = ["tests/"]

[tool.mina.packages.onepm.project]
name = "onepm"
description = "Picks the right package manager for you"
dependencies = [
    "packaging>=22.1",
    "tomlkit>=0.12.3",
]

[tool.mina.packages.onepm.project.optional-dependencies]
shims = ["onepm-shims"]

[tool.mina.packages.onepm.project.scripts]
pi = "onepm:pi"
pu = "onepm:pu"
pr = "onepm:pr"
pun = "onepm:pun"
pa = "onepm:pa"
onepm = "onepm.cli:main"

[tool.mina.packages.shims]
includes = ["src/onepm_shims"]

[tool.mina.packages.shims.project]
name = "onepm-shims"
dependencies = ["unearth>=0.14.0"]

[tool.mina.packages.shims.project.scripts]
pdm = "onepm_shims.shims:pdm"
pipenv = "onepm_shims.shims:pipenv"
poetry = "onepm_shims.shims:poetry"

[tool.ruff.lint]
extend-select = [
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "RUF",  # ruff
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]

[tool.ruff.isort]
known-first-party = ["onepm"]

[tool.onepm]
package-manager = "pdm>=2.12.0"

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.10"
